--- a/tar.is/website/hafaSamband/hafaSamband.css
+++ b/tar.is/website/hafaSamband/hafaSamband.css
@@ -20,7 +20,7 @@ html{
         .main{
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
             min-height: 68vh;
             max-height: auto;
@@ -39,6 +39,7 @@ html{
                     margin: 0 0 5px 0;
                     font-size: 25px;
                     text-align: center;
+                    text-shadow: 3px 3px black;
                 }
 
                 .subtitle{
@@ -52,7 +53,9 @@ html{
 
             .info{
                 width: 70%;
-                display: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
             }
 
                 .info div{
