--- a/tar.is/website/hafaSamband/hafaSamband.css
+++ b/tar.is/website/hafaSamband/hafaSamband.css
@@ -78,7 +78,12 @@ html{
                     font-size: 20px;
                     margin: 10px 0;
                     padding: 5px;
+                    background: #ebebeb;
                 }
+
+                    .info div input:focus{
+                        background: white;
+                    }
 
                 .info div .textIn{
                     height: 90px;
@@ -87,7 +92,12 @@ html{
                     padding: 5px;
                     border-radius: 5px;
                     resize: none;
+                    background: #ebebeb;
                 }
+
+                    .info div .textIn:focus{
+                        background: white;
+                    }
 
                 .info .button{
                     display: flex;
