--- a/hadditaxi.is/website/index.css
+++ b/hadditaxi.is/website/index.css
@@ -7,7 +7,7 @@ html{
     min-height: 100vh;
     font-family: Montserrat;
     font-style: normal;
-    background: #FFBD12;
+    background: #FFB015;
 }
 
     body{
@@ -91,7 +91,7 @@ html{
                         font-size: 30pt;
                         padding: 5px;
                         background: black;
-                        color: #FFBD12;
+                        color: #FFB015;
                     }
 
                         .info div input:focus{
